:bug: Fix color names in palette being clipped and not breaking at dot characters

--- a/frontend/src/app/main/ui/components/color_bullet.scss
+++ b/frontend/src/app/main/ui/components/color_bullet.scss
@@ -86,6 +86,7 @@
 .big-text {
   @include inspectValue;
   @include twoLineTextEllipsis;
+  line-height: 1;
   color: var(--palette-text-color);
   height: $s-28;
   text-align: center;
